--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg" >08:00 AM</span>
           </div>
-          <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm" id = "8AM">
+          <input type="text" class="form-control form8" aria-label="Large" aria-describedby="inputGroup-sizing-sm" id = "8AM">
           <button class="btn saveBtn"><i class="far fa-save"></i></button>
         </div>
       </li>
@@ -49,7 +49,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg">09:00 AM</span>
           </div>
-          <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+          <input type="text" class="form-control form9" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
           <button class="btn saveBtn"><i class="far fa-save"></i></button>
         </div>
       </li> 
@@ -60,7 +60,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg">10:00 AM</span>
           </div>
-          <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+          <input type="text" class="form-control form10" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
           <button class="btn saveBtn"><i class="far fa-save"></i></button>
         </div>
       </li>
@@ -71,7 +71,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg">11:00 AM</span>
           </div>
-          <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+          <input type="text" class="form-control form11" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
           <button class="btn saveBtn"><i class="far fa-save"></i></button>
         </div>
       </li>
@@ -81,7 +81,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg">12:00 PM</span>
           </div>
-          <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+          <input type="text" class="form-control form12" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
           <button class="btn saveBtn"><i class="far fa-save"></i></button>
         </div>
       </li>
@@ -91,7 +91,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg">01:00 PM</span>
           </div>
-          <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+          <input type="text" class="form-control form1" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
           <button class="btn saveBtn"><i class="far fa-save"></i></button>
         </div>
       </li>
@@ -101,7 +101,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg">02:00 PM</span>
           </div>
-          <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+          <input type="text" class="form-control form2" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
           <button class="btn saveBtn"><i class="far fa-save"></i></button>
         </div>
       </li>
@@ -111,7 +111,7 @@
         <div class="input-group-prepend">
           <span class="input-group-text" id="inputGroup-sizing-lg">03:00 PM</span>
         </div>
-        <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+        <input type="text" class="form-control form3" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
         <button class="btn saveBtn"><i class="far fa-save"></i></button>
       </div>
       </li>
@@ -121,7 +121,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg">04:00 PM</span>
           </div>
-          <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+          <input type="text" class="form-control form4" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
           <button class="btn saveBtn"><i class="far fa-save"></i></button>
         </div>
       </li>
@@ -131,7 +131,7 @@
           <div class="input-group-prepend">
             <span class="input-group-text" id="inputGroup-sizing-lg">05:00 PM</span>
           </div>
-          <input type="text" class="form-control" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
+          <input type="text" class="form-control form5" aria-label="Large" aria-describedby="inputGroup-sizing-sm">
           <button class="btn saveBtn"><i class="far fa-save"></i></button>
         </div>
       </li>
